🚀 Fix Railway Deploy Configuration
✅ Fixed package.json scripts:
- Removed frontend references
- Updated build to backend only
- Fixed start command for Railway
- Corrected health check endpoint

✅ Added Railway configuration:
- Dockerfile optimized for Railway
- railway.json with proper settings
- .dockerignore for efficient builds
- Multi-stage build with Node.js + Python

✅ Deploy ready:
- Backend API on port 3001
- Trading Engine Python integration
- Health check: /api/health
- Auto-restart on failure

🎯 Railway will now deploy successfully!

--- a/package.json
+++ b/package.json
@@ -4,26 +4,21 @@
   "description": "🚀 Sistema de Trading DEX Automatizado para Altseason - Bot 24/7 com IA adaptativa, agregação multi-DEX (1inch, Uniswap, Jupiter, PancakeSwap) e dashboard web completo",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\" \"npm run dev:trading\"",
-    "dev:frontend": "cd frontend && npm run dev",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:trading\"",
     "dev:backend": "cd backend && npm run dev",
-    "dev:trading": "cd trading-engine && python src/main.py",
-    "build": "npm run build:frontend && npm run build:backend",
-    "build:frontend": "cd frontend && npm run build",
-    "build:backend": "cd backend && npm run build",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:frontend": "cd frontend && npm start",
+    "dev:trading": "cd trading-engine && python main.py",
+    "build": "npm run build:backend",
+    "build:backend": "cd backend && npm install",
+    "start": "npm run start:backend",
     "start:backend": "cd backend && npm start",
-    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install && cd ../trading-engine && pip install -r requirements.txt",
+    "install:all": "npm install && cd backend && npm install && cd ../trading-engine && pip install -r requirements.txt",
     "migrate": "cd backend && npx prisma migrate dev",
     "migrate:reset": "cd backend && npx prisma migrate reset",
     "seed": "cd backend && npm run seed",
-    "test": "npm run test:frontend && npm run test:backend && npm run test:trading",
-    "test:frontend": "cd frontend && npm test",
+    "test": "npm run test:backend && npm run test:trading",
     "test:backend": "cd backend && npm test",
     "test:trading": "cd trading-engine && python -m pytest",
-    "lint": "npm run lint:frontend && npm run lint:backend",
-    "lint:frontend": "cd frontend && npm run lint",
+    "lint": "npm run lint:backend",
     "lint:backend": "cd backend && npm run lint",
     "docker:up": "docker-compose -f docker/docker-compose.yml up -d",
     "docker:down": "docker-compose -f docker/docker-compose.yml down",
@@ -34,7 +29,7 @@
     "deploy": "bash scripts/deploy.sh",
     "create-admin": "cd backend && npm run create-admin",
     "dex-setup": "bash scripts/dex-setup.sh",
-    "health-check": "curl http://localhost:3001/api/health && curl http://localhost:3000/api/health"
+    "health-check": "curl http://localhost:3001/api/health"
   },
   "keywords": [
     "dex",
