--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
