feat: Implement full-stack solution - Frontend + Backend in single Railway deploy
🎯 SOLUTION: Serve React Frontend through Express Backend

✅ PROBLEM SOLVED:
- Railway was only serving backend API (JSON responses)
- Frontend React was not accessible at root URL
- Users expected full application at main URL

🏗️ IMPLEMENTATION:
- Backend v7: Express serves React static files + APIs
- Frontend build: React compiled to /dist folder
- Dockerfile updated: Builds frontend during deploy
- Single URL serves both frontend and backend

📁 ARCHITECTURE:
- GET / → React Frontend (index.html)
- GET /api/* → Backend APIs (JSON)
- Static assets served from /dex-trading-frontend/dist/

🔧 TECHNICAL CHANGES:
- Created minimal-app-v7.js with static file serving
- Added build-frontend.sh script
- Updated Dockerfile-hybrid for frontend build
- Modified start-hybrid.sh to use v7

✅ TESTED LOCALLY:
- Frontend serves at http://localhost:3007/
- APIs work at http://localhost:3007/api/health
- React app loads with proper assets
- Full-stack integration confirmed

🚀 READY FOR RAILWAY DEPLOY:
- Single project serves complete application
- No additional Railway projects needed
- Automatic CI/CD will build and deploy
- Users will see React frontend at main URL

This solves the issue where Railway was only showing backend JSON instead of the React frontend interface.

--- a/Dockerfile-hybrid
+++ b/Dockerfile-hybrid
@@ -26,6 +26,13 @@ RUN npm install --only=production
 COPY backend/package*.json ./backend/
 RUN cd backend && npm install --only=production
 
+# Copy and build frontend
+COPY dex-trading-frontend/package*.json ./dex-trading-frontend/
+RUN cd dex-trading-frontend && npm install
+
+COPY dex-trading-frontend/ ./dex-trading-frontend/
+RUN cd dex-trading-frontend && npm run build
+
 # Copy all source code
 COPY backend/ ./backend/
 COPY trading-engine/ ./trading-engine/
